<resources>
    <string name="app_name">WatchAW</string>
    <string name="lewati_perkenalan">Lewati Perkenalan</string>
    <string name="now_playing">Now Playing</string>
    <string name="lebih_mudah">Lebih mudah untuk mengetahui film yang sedang tampil</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="tidak_khawatir">Tidak khawatir ketinggalan film terbaru</string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="cashless">Cashless</string>
    <string name="gunakan">Gunakan e-wallet untuk permudah transaksi tiket nonton</string>
    <string name="mulai">Mulai</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="nama">Nama</string>
    <string name="photo">Photo</string>
    <string name="welcome">Welcome, Zac Efron</string>
    <string name="simpan_lanjutkan"><![CDATA[Simpan & Lanjutkan]]></string>
    <string name="lewati_dulu">Lewati Dulu</string>
    <string name="now_playing_2">NOW PLAYING</string>
    <string name="coming_soon">COMING SOON</string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="layar_bioskop">Layar Bioskop</string>
    <string name="beli_tiket">Beli Tiket</string>
    <string name="checkout">Checkout</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="batalkan">Batalkan</string>
    <string name="when">When</string>
    <string name="datetime">Date and Time</string>
    <string name="cinema">Cinema</string>
    <string name="seatnoa1">Seat No.A1</string>
    <string name="seatnoa2">Seat No.A2</string>
    <string name="seats">Seats</string>
    <string name="total">Total</string>
    <string name="e_wallet">E - Wallet</string>
    <string name="saldo">Saldo</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="simpandatabaru">Simpan Data Baru</string>
    <string name="my_wallet">My Wallet</string>
    <string name="saldo_tersedia">Saldo Tersedia</string>
    <string name="daftar_transaksi">Daftar Transaksi</string>
    <string name="history">History Page</string>
    <string name="masuk_akun">Masuk Akun</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="welcome2">Selamat Datang, Zac Efron</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="photo2">Photo</string>
    <string name="rp_500">IDR 500.000</string>
    <string name="storyboard">Storyboard</string>
    <string name="cast_list">Cast List</string>
    <string name="avengers_endgame">Avengers Endgame</string>
    <string name="action_sci_fi">Action, Sci-fi</string>
    <string name="the_avengers_dan_their_allies_should_sacrifice_everything_to_beating_thanos_before_he_does_destroy_a_whole_universe">The Avengers dan their allies should sacrifice everything to beating Thanos before he does destroy a whole universe.</string>
    <string name="todo">TODO</string>
    <string name="avengerendgame">Avcengers Endgame</string>
    <string name="happy_watching">Happy Watching</string>
    <string name="tiket_berhasil">Tiket telah berhasil dibeli dan selamat menikmati film</string>
    <string name="lihat_tiket">Lihat Tiket</string>
    <string name="home">Home</string>
</resources>