<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_background_grey"
        tools:context=".home.DashboardFragment">
        
        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="30dp"
            android:text="@string/coming_soon"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_nowplaying" />
    
        <TextView
            android:id="@+id/tv_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="24dp"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Zac Efron"/>

        <TextView
            android:id="@+id/tv_saldo"
            android:layout_width="163dp"
            android:layout_height="19dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="4dp"
            android:drawablePadding="3dp"
            android:text="IDR 500.000"
            android:textColor="@color/white"
            app:drawableStartCompat="@drawable/ic_account_balance_wallet_white_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_nama"
            tools:text="IDR 500.000" />

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="28dp"
            android:contentDescription="@string/photo2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/tv_nama"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/photo" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="52dp"
            android:text="@string/now_playing_2"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_saldo" />
    
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_nowplaying"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />
    
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_comingsoon"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />
    
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>